k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcb
  labels:
    app.kubernetes.io/name: kcb
